Refine the metronome layout.
Start work on loading the Template